# E-commerce-AI-Image-Video-Maker

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  database.py  deps.py  main.py
backend/app/agents/: __init__.py  checkpoint.py  graph.py  history.py  image_store.py  llm.py  nodes.py  prompts.py  qc_bus.py  runner.py  state.py  tools.py
backend/app/api/: agent.py  analysis.py  asset_library.py  asset_tracking.py  auth.py  balance.py  file_serve.py  generate.py  history.py  model.py  models.py  outfit_scraper.py  prompt_library.py  replicate.py  tiktok_script.py  video.py  video_history.py  video_prompt.py  video_shots.py
backend/app/providers/: base.py  deepseek_provider.py  fal_provider.py  gemini_provider.py  gptimage_provider.py  gptimage_vip_provider.py  mock_provider.py  mock_video_provider.py  nanobanana_provider.py  openai_provider.py  seedance_apiyi_provider.py  seedance_mini_provider.py  seedance_provider.py  seedream5_provider.py  video_base.py  volcengine_provider.py
backend/app/services/: asset_library_store.py  history_store.py  http_client.py  image_utils.py  model_router.py  model_store.py  postprocess.py  prompt_engine.py  prompt_library_store.py  task_store.py  tiktok_downloader.py  video_frame_extractor.py  video_history_store.py  video_thumbnail.py  video_utils.py
backend/assets/models/: index.json
backend/templates/: aplus.md  model_gen.md  model_ref.md  outfit.md  product_main.md  product_video.md  seed_grass.md
deploy/: ai-zw.service
frontend/: index.html  package-lock.json  (+2 more)
(+62 files in other folders)
