[project]
name = "ai-image-tool"
version = "0.1.0"
description = "AI 电商图像视频生成工具 - 后端"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-multipart",
    "httpx",
    "openai",
    "pillow",
    "python-dotenv",
    "numpy>=2.2.6",
    "mediapipe",
    "aiosqlite>=0.22.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
